# ACE

./: .gitignore  LICENSE.md  README.md  VendingMachine.csv  VendingMachine.decls  VendingMachine.dtrace  fault_neg1k_filtered.csv  gmon.out  invariant_config.xml  transcript  vcd2csv
Copilot_mined_contracts/Accumulator/: contract.txt
Copilot_mined_contracts/Comparator_3bit/: contract.txt
Copilot_mined_contracts/ibex_alu/: contract.txt
Copilot_mined_contracts/sqrt/: contract.txt
Copilot_mined_contracts/uart/: contract.txt
DATE_Mined_Contracts/: res_overview.txt
DATE_tests/: accumulator_results.txt  adder_8bit_results.txt  comparator_3bit_results.txt  ibex_csr_result_file.txt  ibex_csr_results.txt  multi_16bit_results.txt  sqrt_results.txt
DATE_tests/accumulator/: accu.csv  (+3 more)
Designs/sqrt/hif/injected/: CMakeLists.txt
Designs/sqrt/hif/injected/inc/: sqrt_calculator.hpp  sqrt_newton.hpp
Designs/sqrt/hif/injected/src/: main.cpp  sqrt_calculator.cpp  sqrt_newton.cpp
Detection_trace_gen/: DU_gen.py
InvGen/: InvGen.py  InvGen_old.py  InvTemplates.xml  camellia.csv  run_InvGen.sh
LLM_prompts/: Adder.txt  Comparator.txt  accumulator.txt  ibex_alu.txt  ibex_csr.txt  ibex_multdiv.txt  multiplier.txt  sqrt.txt  uart.txt
injectable_design_gen/: generate_injectable.py  globals.py  hif_utils.py
mined_contracts/: res_overview.txt
scripts/: run.sh  setupEnvironment.sh  setupenv-filtering.sh
src/: ACE.py  globals.py
tests/: run_complete.sh
trace_filtering/: filter.py  filter_old.py  filter_old_1.py  filter_old_2.py  run_filtering.sh  run_filtering.sh 
(+1459 files in other folders)
